# algorithms_atp

./: README.md
problem2-2/football_team/: CMakeLists.txt  algo.tex  main.cpp
